alteração no modal editar usuario

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <i class="bi bi-plus"></i> Adicionar Usuário
         </button>
         <div id="table"></div>
-		<div id="modalEditarUsuario"></div>
+		<div id="modalUsuario"></div>
     </div>
     <script type="module" src="script.js"></script>
     <script src="../bootstrap-5.3.2/js/bootstrap.min.js"></script>
