modal para adicionar usuário/alterado chamada do modal de editar usuario

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container mt-5">
-		<button type="button" class="btn btn-primary" onclick="adicionarUsuario()">
+		<button type="button" class="btn btn-primary" onclick="modalAdicionarUsuario()">
             <i class="bi bi-plus"></i> Adicionar Usuário
         </button>
         <div id="table"></div>
